--- a/PaymentService/src/main/resources/application.properties
+++ b/PaymentService/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=PaymentService
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+server.port=0
+eureka.instance.instance-id=${random.value}
+spring.config.import=configserver:http://localhost:8012
+
